--- a/css/index.css
+++ b/css/index.css
@@ -1147,6 +1147,19 @@ body {
   transition-duration: 500ms;
 }
 
+.backdrop_2 {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.453);
+  opacity: 0;
+  visibility: hidden;
+  transition-duration: 500ms;
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -1824,6 +1837,19 @@ body {
   padding: 23px 17px 41px 30px;
   border-radius: 10px;
 }
+.review__item:nth-child(3) .review__text {
+  font-size: 16px;
+}
+@media screen and (max-width: 1200px) {
+  .review__item:nth-child(3) .review__text {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .review__item:nth-child(3) .review__text {
+    font-size: 16px;
+  }
+}
 @media screen and (max-width: 1200px) {
   .review__item {
     width: 100%;
@@ -2019,4 +2045,97 @@ body {
   .footer__lang a {
     font-size: 40px;
   }
+}
+
+.thanks {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 134px 66px 152px 66px;
+  background-color: #FFFFFF;
+  z-index: 100;
+}
+@media screen and (max-width: 767px) {
+  .thanks {
+    padding: 50px 25px;
+  }
+}
+
+.thanks__title {
+  font-family: "Merriweather";
+  font-size: 40px;
+  line-height: 1.25;
+  text-align: center;
+  color: #242451;
+  margin-bottom: 22px;
+}
+@media screen and (max-width: 767px) {
+  .thanks__title {
+    font-size: 30px;
+  }
+}
+
+.thanks__text {
+  font-family: "Merriweather";
+  font-size: 25px;
+  line-height: 1.16;
+  text-align: center;
+  color: var(--black-text-color);
+  max-width: 300px;
+}
+@media screen and (max-width: 767px) {
+  .thanks__text {
+    font-size: 16px;
+    width: 200px;
+  }
+}
+
+.burger {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #242451;
+  z-index: 110;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-duration: 500ms;
+  transform: translate(100%);
+}
+
+.burger__list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.burger__item {
+  text-align: center;
+}
+
+.burger__link {
+  font-family: "Roboto";
+  font-size: 20px;
+  line-height: 1.13;
+  color: var(--primary-text-color);
+}
+
+.burger__phone {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 13px;
+}
+
+.burger__close {
+  position: absolute;
+  background-color: transparent;
+  top: 45px;
+  right: 16px;
 }/*# sourceMappingURL=index.css.map */
