--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,6 +11,19 @@
     transition-duration: 500ms;
 }
 
+.backdrop_2 {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.453);
+    opacity: 0;
+    visibility: hidden;
+    transition-duration: 500ms;
+}
+
 .modal {
     position: absolute;
     top: 50%;
