--- a/sass/index.scss
+++ b/sass/index.scss
@@ -15,3 +15,5 @@
 @import './components/contact';
 @import './components/review';
 @import './components/footer';
+@import './components/thanks';
+@import './components/burger';
