--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -53,6 +53,20 @@
     padding: 23px 17px 41px 30px;
     border-radius: 10px;
 
+    &:nth-child(3) {
+        .review__text {
+            font-size: 16px;
+
+            @media screen and (max-width:1200px) {
+                font-size: 20px;
+            }
+
+            @media screen and (max-width:767px) {
+                font-size: 16px;
+            }
+        }
+    }
+
     @media screen and (max-width:1200px) {
         width: 100%;
     }
