--- a/css/index.css
+++ b/css/index.css
@@ -247,6 +247,10 @@ body {
 @media screen and (max-width: 1200px) {
   .header {
     padding-top: 53px;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+    transition-duration: 300ms;
   }
 }
 @media screen and (max-width: 767px) {
@@ -352,7 +356,7 @@ body {
     font-size: 40px;
     text-align: center;
     margin-bottom: 32px;
-    margin-top: 37px;
+    margin-top: 187px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -725,7 +729,7 @@ body {
 }
 @media screen and (max-width: 767px) {
   .process__subtitle {
-    font-size: 20px;
+    font-size: 19px;
     margin-bottom: 15px;
   }
 }
