--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,6 +3,10 @@
 
     @media screen and (max-width:1200px) {
         padding-top: 53px;
+        position: fixed;
+        width: 100%;
+        z-index: 100;
+        transition-duration: 300ms;
     }
 
     @media screen and (max-width:767px) {
