--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -87,7 +87,7 @@
 
     a {
         font-family: 'Roboto';
-        font-size: 25px;
+        font-size: 30px;
         line-height: 1.16;
         color: #242451;
     }
@@ -109,6 +109,7 @@
 }
 
 .contact__form {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -120,7 +121,7 @@
 
 .contact__input {
     padding: 15px 45px;
-    background-color: transparent;
+    background-color: #f4f4f4;
     border: 1px solid #242451;
     border-radius: 10px;
 
