--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -92,7 +92,7 @@
     }
 
     @media screen and (max-width:767px) {
-        font-size: 16px;
+        font-size: 18px;
     }
 }
 
@@ -152,7 +152,7 @@
 
     @media screen and (max-width:767px) {
         padding-left: 37px;
-        background-position: top left;
+        background-position: top 2px left;
     }
 }
 
@@ -170,6 +170,6 @@
     }
 
     @media screen and (max-width:767px) {
-        font-size: 16px;
+        font-size: 18px;
     }
 }
