--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -47,7 +47,8 @@
 
     @media screen and (max-width:767px) {
         font-size: 35px;
-        margin-bottom: 16px;
+        margin-bottom: 18px;
+        margin-top: 146px;
     }
 }
 
@@ -64,7 +65,7 @@
     }
 
     @media screen and (max-width:767px) {
-        font-size: 16px;
+        font-size: 18px;
         margin-bottom: 27px;
     }
 }
