--- a/sass/components/_thanks.scss
+++ b/sass/components/_thanks.scss
@@ -12,7 +12,7 @@
     transition-duration: 300ms;
 
     @media screen and (max-width:767px) {
-        padding: 50px 25px;
+        padding: 60px 25px;
     }
 }
 
@@ -22,6 +22,16 @@
     right: 20px;
     background-color: transparent;
     cursor: pointer;
+
+    @media screen and (max-width:767px) {
+        top: 10px;
+        right: 10px;
+
+        img {
+            width: 40px;
+            height: 40px;
+        }
+    }
 }
 
 .thanks__title {
